--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <label for="modulo">Módulo</label>
         <select name="" id="modulo">
-            <option selected>Catalogo</option>
+            <option selected>Catálogo</option>
             <option selected>Vendas</option>
             <option selected>Interface</option>
             <option selected>Disponibilidade</option>
