--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="java.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Helpdesk</title>
 </head>
 <body>
+    <div class="geralzao">
     <div class="cabecalho_principal">
         <h1>Central de serviços</h1>
     </div>
@@ -18,8 +20,10 @@
             <li>Base de conhecimento</li>
             <li>Novo chamado</li>
             <li>Lista de comando</li>
+            <li><a class="historico" href="index2.html">Chamados abertos</a></li>
         </ul>
     </div>
+</div>
 
     <!-- ==============================Página Principal========================================== -->
     <div class="principal_tudo">
@@ -28,7 +32,7 @@
     </div>
 
     <div class="prod_mod">
-        <h2>Produto   Processo   Modulo</h2>
+        <center><h2>Produto   Processo   Modulo</h2></center>
     </div>
 
     <div class="select1">
@@ -58,7 +62,7 @@
     </div>
 
     <div class="caminho">
-        <h2>Caminho Natureza Severidade Versão</h2>
+        <center><h2>Caminho Natureza Severidade Versão</h2></center>
     </div>
     <div class="select2">
         <label for="caminho">Caminho: </label>
@@ -76,7 +80,7 @@
         <input class="vencimento" type="text" placeholder="Manutenção de equipamentos" id="vencimento">
 </div>
         <div class="caminho">
-            <h2>Título/Descrição</h2>
+            <center><h2>Título/Descrição</h2></center>
         </div>
         <div class="select2">
         <label for="titulo">Título: </label>
@@ -93,6 +97,8 @@
     </div>
 
 </div>
+
+
     
 </body>
 </html>
